upgraded html code

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,6 @@
 <body>
     <header class="header">
         <div class="container container-header">
-            <h1 class="main-hide">Сторінка Портфоліо</h1>
         <a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
         <nav>
             <ul class="list-nav container-beg">
@@ -30,9 +29,9 @@
         
     </header>
     <main>
-        <section>
-            <div class="container container-filter">
-                <h2 class="main-hide">Портфоліо</h2>
+        <section class="section">
+            <div class="container">
+                <h1 class="visually-hidden">Портфоліо</h1>
                 <ul class="list-nav container-filter-nav">
                     <li><button class="sec-btn" type="button">Усі</button></li>
                     <li><button class="sec-btn" type="button">Веб-сайти</button></li>
