--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main>  
         <section class="sec-back">
-            <div class="container container-order">
+            <div class="container">
                 <h1 class="sec-front"> 
                     Ефективні рішення для
                     <br>
@@ -40,9 +40,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="section">
             <div class="container">
-                <h2 class="main-hide">Особливості</h2>
+                <h2 class="visually-hidden">Особливості</h2>
             <ul class="list-nav container-list-main">
                 <li class="main-list">
                     <h3 class="main-list-titel">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -63,9 +63,9 @@
             </ul>
             </div>
         </section>
-        <section>
+        <section class="about section">
             <div class="container">
-                <h2 class="doing">Чим ми займаємося</h2>
+                <h2 class="doing titel">Чим ми займаємося</h2>
             <ul class="list-nav container-doing">
                 <li>
                     <img src="./images/box 1.jpg" alt="Coding" width="370">
@@ -79,29 +79,37 @@
             </ul>
             </div>
         </section>
-        <section class="bck-ground">
+        <section class="bck-ground section titel">
             <div class="container container-team">
-                <h2 class="about-us">Наша команда</h2>
+                <h2 class="about-us titel">Наша команда</h2>
                 <ul class="list-nav container-about-team">
                     <li class="last-list">
-                        <img src="./images/img.jpg" alt="Ігор Дем'яненко" width="270" height="260" class="foto"> 
-                        <h3 class="about-person">Ігор Дем'яненко</h3>
-                        <p class="about-work" lang="en">Product Designer</p>
+                        <img src="./images/img.jpg" alt="Ігор Дем'яненко" width="270" height="260" > 
+                        <div class="common-styles">
+                            <h3 class="about-person">Ігор Дем'яненко</h3>
+                            <p class="about-work" lang="en">Product Designer</p>
+                        </div>
                     </li>
                     <li class="last-list">
-                        <img src="./images/img2.jpg" alt="Ольга Рєпіна" width="270" height="260" class="foto">
-                        <h3 class="about-person">Ольга Рєпіна</h3>
-                        <p class="about-work" lang="en">Frontend Developer</p>
+                        <img src="./images/img2.jpg" alt="Ольга Рєпіна" width="270" height="260" >
+                        <div class="common-styles">
+                            <h3 class="about-person">Ольга Рєпіна</h3>
+                            <p class="about-work" lang="en">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="last-list">
-                        <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" height="260" class="foto">
-                        <h3 class="about-person">Микола Тарасов</h3>
-                        <p class="about-work" lang="en">Marketing</p>
+                        <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" height="260" >
+                        <div class="common-styles">
+                            <h3 class="about-person">Микола Тарасов</h3>
+                            <p class="about-work" lang="en">Marketing</p>
+                        </div>
                     </li>
                     <li class="last-list">
-                        <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" height="260" class="foto">
-                        <h3 class="about-person">Михайло Єрмаков</h3>
-                        <p class="about-work" lang="en">UI Designer</p>
+                        <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" height="260" >
+                        <div  class="common-styles">
+                            <h3 class="about-person">Михайло Єрмаков</h3>
+                            <p class="about-work" lang="en">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -109,16 +117,16 @@
     </main>
 
     <footer class="foot">
-        <div class="container container-footer">
+        <div class="container">
             <a href="./index.html" class="foot-logo" lang="en"> <span class="logo-web">Web</span>Studio</a>
         <ul class="list-nav container-list-footer">
-            <li>
+            <li class="foot-child">
                 <a class="foot-list" href="https://goo.gl/maps/FaGYjTXJcdozZgpE8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
             </li>
-            <li>
+            <li class="foot-child">
                 <a class="foot-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="foot-child">
                 <a class="foot-info" href="tel:++380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
