--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" 
+    />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -38,7 +45,7 @@
                 <div class="container-btn">
                     <button class="sec-button" type="button" >Замовити послугу</button>
                 </div>
-            </div>
+               </div>
         </section>
         <section class="section">
             <div class="container">
@@ -65,47 +72,47 @@
         </section>
         <section class="about section">
             <div class="container">
-                <h2 class="doing titel">Чим ми займаємося</h2>
+                <h2 class="titel">Чим ми займаємося</h2>
             <ul class="list-nav container-doing">
                 <li>
-                    <img src="./images/box 1.jpg" alt="Coding" width="370">
+                    <img src="./images/box 1.jpg" alt="Coding" width="370" class="foto">
                 </li>
                 <li>
-                    <img src="./images/box 2.jpg" alt="Testing" width="370">
+                    <img src="./images/box 2.jpg" alt="Testing" width="370" class="foto">
                 </li>
                 <li>
-                    <img src="./images/box 3.jpg" alt="Designing" width="370">
+                    <img src="./images/box 3.jpg" alt="Designing" width="370" class="foto">
                 </li>
             </ul>
             </div>
         </section>
-        <section class="bck-ground section titel">
-            <div class="container container-team">
-                <h2 class="about-us titel">Наша команда</h2>
+        <section class="bck-ground section">
+            <div class="container">
+                <h2 class="titel">Наша команда</h2>
                 <ul class="list-nav container-about-team">
                     <li class="last-list">
-                        <img src="./images/img.jpg" alt="Ігор Дем'яненко" width="270" height="260" > 
+                        <img src="./images/img.jpg" alt="Ігор Дем'яненко" width="270" height="260" class="foto"> 
                         <div class="common-styles">
                             <h3 class="about-person">Ігор Дем'яненко</h3>
                             <p class="about-work" lang="en">Product Designer</p>
                         </div>
                     </li>
                     <li class="last-list">
-                        <img src="./images/img2.jpg" alt="Ольга Рєпіна" width="270" height="260" >
+                        <img src="./images/img2.jpg" alt="Ольга Рєпіна" width="270" height="260" class="foto">
                         <div class="common-styles">
                             <h3 class="about-person">Ольга Рєпіна</h3>
                             <p class="about-work" lang="en">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="last-list">
-                        <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" height="260" >
+                        <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" height="260" class="foto">
                         <div class="common-styles">
                             <h3 class="about-person">Микола Тарасов</h3>
                             <p class="about-work" lang="en">Marketing</p>
                         </div>
                     </li>
                     <li class="last-list">
-                        <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" height="260" >
+                        <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" height="260" class="foto">
                         <div  class="common-styles">
                             <h3 class="about-person">Михайло Єрмаков</h3>
                             <p class="about-work" lang="en">UI Designer</p>
@@ -119,7 +126,7 @@
     <footer class="foot">
         <div class="container">
             <a href="./index.html" class="foot-logo" lang="en"> <span class="logo-web">Web</span>Studio</a>
-        <ul class="list-nav container-list-footer">
+        <ul class="list-nav">
             <li class="foot-child">
                 <a class="foot-list" href="https://goo.gl/maps/FaGYjTXJcdozZgpE8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
             </li>
