--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" 
+    />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -41,49 +48,67 @@
                 </ul>
                 <ul class="list-nav container-filter-foto">
                     <li class="filter-border"> 
-                        <img src="./images/img01.jpg" alt="Технокряк" width="370" height="294">
-                        <h2 class="portfolio-done">Технокряк</h2>
-                        <p class="portfolio-doing">Веб-сайт</p>
+                        <img src="./images/img01.jpg" alt="Технокряк" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done">Технокряк</h2>
+                            <p class="portfolio-doing">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img02.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                        <h2 class="portfolio-done">Постер New Orlean vs Golden Star</h2>
-                        <p class="portfolio-doing">Дизайн</p>
+                        <img src="./images/img02.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done">Постер New Orlean vs Golden Star</h2>
+                            <p class="portfolio-doing">Дизайн</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img03.jpg" alt="Ресторан Seafood" width="370" height="294">
-                        <h2 class="portfolio-done">Ресторан Seafood</h2>
-                        <p class="portfolio-doing">Додаток</p>
+                        <img src="./images/img03.jpg" alt="Ресторан Seafood" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done">Ресторан Seafood</h2>
+                            <p class="portfolio-doing">Додаток</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img04.jpg" alt="Проєкт Prime" width="370" height="294"> 
-                        <h2 class="portfolio-done">Проєкт Prime</h2>
-                        <p class="portfolio-doing">Маркетинг</p>
+                        <img src="./images/img04.jpg" alt="Проєкт Prime" width="370" height="294" class="foto"> 
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done">Проєкт Prime</h2>
+                            <p class="portfolio-doing">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img05.jpg" alt="Проєкт Boxes" width="370" height="294">
-                        <h2 class="portfolio-done">Проєкт Boxes</h2>
-                        <p class="portfolio-doing">Додаток</p>
+                        <img src="./images/img05.jpg" alt="Проєкт Boxes" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done">Проєкт Boxes</h2>
+                            <p class="portfolio-doing">Додаток</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img06.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                        <h2 class="portfolio-done" lang="en">Inspiration has no Borders</h2>
-                        <p class="portfolio-doing">Веб-сайт</p>
+                        <img src="./images/img06.jpg" alt="Inspiration has no Borders" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done" lang="en">Inspiration has no Borders</h2>
+                            <p class="portfolio-doing">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img07.jpg" alt="Видання Limited Edition" width="370" height="294">
-                        <h2 class="portfolio-done">Видання Limited Edition</h2>
-                        <p class="portfolio-doing">Дизайн</p>
+                        <img src="./images/img07.jpg" alt="Видання Limited Edition" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done">Видання Limited Edition</h2>
+                            <p class="portfolio-doing">Дизайн</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img08.jpg" alt="Проєкт LAB" width="370" height="294">
-                        <h2 class="portfolio-done">Проєкт LAB</h2>
-                        <p class="portfolio-doing">Маркетинг</p>
+                        <img src="./images/img08.jpg" alt="Проєкт LAB" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done">Проєкт LAB</h2>
+                            <p class="portfolio-doing">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="filter-border">
-                        <img src="./images/img09.jpg" alt="Growing Business" width="370" height="294">
-                        <h2 class="portfolio-done" lang="en">Growing Business</h2>
-                        <p class="portfolio-doing">Додаток</p>
+                        <img src="./images/img09.jpg" alt="Growing Business" width="370" height="294" class="foto">
+                        <div class="portfolio-common-styles">
+                            <h2 class="portfolio-done" lang="en">Growing Business</h2>
+                            <p class="portfolio-doing">Додаток</p>
+                        </div>
                     </li>
                 </ul>
             </div>
