--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
@@ -16,6 +15,7 @@
         referrerpolicy="no-referrer" 
     />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     <header class="header">
@@ -42,7 +42,7 @@
                     <br>
                      вашого бізнесу
                     </h1>
-                <div class="container-btn">
+                <div>
                     <button class="sec-button" type="button" >Замовити послугу</button>
                 </div>
                </div>
